2006-02-20  Roger Leigh  <rleigh@debian.org>

	* TODO: Add dchroot.

	* configure.ac: Create schroot/dchroot.1.

	* schroot/Makefile.am: If --enable-dchroot was used, build and
	install dchroot and dchroot.1.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.h (session): The contructor chroots
	argument is a const reference rather than a value.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/dchroot.1.in: Add manual page for dchroot.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc: If SBUILD_DCHROOT_COMPAT is defined, run in
	dchroot compatibility mode, using the alternate
	dchroot::chroot_config and dchroot::session classes for reading
	the configuration and session handling.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot-options.cc
	(options): Set dchroot_compat if SBUILD_DCHROOT_COMPAT is defined.
	(options): If dchroot_compat is set, use dchroot compatible
	options, otherwise schroot options.

	* schroot/schroot-options.h
	(action_type): New action ACTION_LOCATION to print chroot
	location.
	(chroot_path): New member; chroot to print path.
	(dchroot_compat): New member; dchroot compatibility mode.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/dchroot-session.(cc|h): New class, dchroot::session,
	derived from sbuild::session.  This disables user authentication
	(but not authorisation), and disables user switching.

	* schroot/dchroot-chroot-config.(cc|h): New class,
	dchroot::chroot_config, derived from sbuild::chroot_config.  This
	parses the dchroot.conf configuration file.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* configure.ac: Add --enable-dchroot check to enable dchroot
	compatibility.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/schroot.cc (main): Use the new session::ptr typedef.

	* schroot/sbuild-session.h: Add a ptr typedef, a shared_ptr to a
	session.

2006-02-20  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot-config.cc